完善数据下载

--- a/zsxq/面向对象编程/数据库操作.ipynb
+++ b/zsxq/面向对象编程/数据库操作.ipynb
@@ -922,7 +922,7 @@
    "outputs": [],
    "source": [
     "def plot_data(condition,title):\n",
-    "    from pyecharts.charts import Bar\n",
+    "    from pyecharts import Bar\n",
     "    from sqlalchemy import create_engine\n",
     "    engine = create_engine('postgresql+psycopg2://postgres:123456@localhost:5432/postgres')\n",
     "    data=pd.read_sql(\"select * from stock_data where+\"+ condition,engine)\n",
